--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container-popup">
     <header class="hedader">
       <div class="container-hedader container">
         <nav class="menu">
@@ -53,13 +54,13 @@
         </address>
       </div>
     </header>
-    <main>
       <section class="banner">
         <div class="container container-banner">
           <h1 class="banner-title">Effective Solutions for Your Business</h1>
-          <button class="banner-button" type="button">Order Service</button>
+          <button  class="banner-button" type="button"><a class="banner-button-link" href="#popup">Order Service</a></button>
         </div>
       </section>
+      </div>
       <section class="soft-skills">
         <div class="container container-skills">
           <h2 class="visually-hidden">Soft Skills</h2>
@@ -461,7 +462,67 @@
               </li>
             </ul>
           </div>
+      <div class="footer-email">
+        <p class="social-text">Subscribe</p>
+          <form class="footer-email-container">
+            <input type="text" class="footer-email-container-input" placeholder="E-mail">
+          </form>
+      </div>
+      <div class="footer-conteiner-btn">
+      <button class="footer-email-btn">Subscribe <svg class="icon" width="24" height="24">
+                        <use href="./images/icons.svg#frame"></use>
+                      </svg></button>
+      </div>
       </div>
     </footer>
+    <div id="popup" class="popup">
+      <div class="popup-body">
+        <div class="popup-content">
+          <div class="popup-content-close">
+            <svg class="icon-close" width="8" height="8">
+              <use href="./images/icons.svg#close-black"></use>
+            </svg>
+            </div>
+          <div class="popup-title">Leave your contacts and we will call you back</div>
+          <form class="form-title" action="">
+            <label class="form-lebel" for="username">Name
+              <div class="form-title-input-name">
+                <svg class="icon-form-name" width="18" height="18">
+                        <use href="./images/icons.svg#person-black"></use>
+                      </svg>
+            <input class="form-title-input" type="text" name="username" >
+                    </div>
+            </label>
+            <label class="form-lebel" for="usertell">Phone
+              <div class="form-title-input-name">
+                <svg class="icon-form-tellemail" width="18" height="24">
+                        <use href="./images/icons.svg#phone-black"></use>
+                      </svg>
+            <input class="form-title-input" type="tell" name="usertell">
+            </div>
+            </label>
+            <label class="form-lebel" for="useremail">Email
+              <div class="form-title-input-name">
+                <svg class="icon-form-tellemail" width="18" height="24">
+                        <use href="./images/icons.svg#email-black"></use>
+                      </svg>
+            <input class="form-title-input" type="email" name="useremail">
+            </div>
+            </label>
+            <label class="form-lebel" for="usercomment">Comment
+            <textarea class="form-title-input textarea" name="usercoment" placeholder="Text input"></textarea>
+            </label>
+            </form>
+            <div class="form-lebel-checkbox">
+            <input type="checkbox" name="accept" value="ok" required>
+            <label>I accept the terms and conditions of the 
+            <a class="form-lebel-link" href=""> Privacy Policy</a>
+            </label>
+            </div>
+          <div class="container-button-form">
+          <button class="formbtn" type="submit">Send</button>
+          </div>
+          </div>
+          </div>
   </body>
 </html>
