--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="banner">
         <div class="container container-banner">
           <h1 class="banner-title">Effective Solutions for Your Business</h1>
-          <button  class="banner-button" type="button"><a class="banner-button-link" href="#popup">Order Service</a></button>
+          <button  class="banner-button" type="button">Order Service</button>
         </div>
       </section>
       </div>
@@ -416,7 +416,6 @@
           </ul>
         </div>
       </section>
-    </main>
 
     <footer class="down">
       <div class="container-footer container">
@@ -462,67 +461,70 @@
               </li>
             </ul>
           </div>
-      <div class="footer-email">
-        <p class="social-text">Subscribe</p>
+      <div class="footer-conteiner">
+        <p class="footer-conteiner-p">Subscribe</p>
           <form class="footer-email-container">
-            <input type="text" class="footer-email-container-input" placeholder="E-mail">
-          </form>
-      </div>
-      <div class="footer-conteiner-btn">
-      <button class="footer-email-btn">Subscribe <svg class="icon" width="24" height="24">
+            <label class="footer-email-label" for="footer-email">
+            <input type="email" id="footer-email" class="footer-email-container-input" placeholder="E-mail">
+            </label>
+            <button class="footer-email-btn" type="submit">Subscribe<svg class="icon-list" width="24" height="24">
                         <use href="./images/icons.svg#frame"></use>
                       </svg></button>
-      </div>
+          </form>
+        </div>
       </div>
     </footer>
-    <div id="popup" class="popup">
+    <div class="popup">
       <div class="popup-body">
         <div class="popup-content">
-          <div class="popup-content-close">
+          <button class="content-close" type="button">
             <svg class="icon-close" width="8" height="8">
               <use href="./images/icons.svg#close-black"></use>
             </svg>
-            </div>
-          <div class="popup-title">Leave your contacts and we will call you back</div>
-          <form class="form-title" action="">
-            <label class="form-lebel" for="username">Name
+          </button>
+          <p class="popup-title">Leave your contacts and we will call you back</p>
+          <form class="form-title" action="#">
+            <div class="form-title-conteiner">
+            <label class="form-lebel" for="user-name">Name</label>
               <div class="form-title-input-name">
-                <svg class="icon-form-name" width="18" height="18">
+                <svg class="icon-form" width="18" height="24">
                         <use href="./images/icons.svg#person-black"></use>
                       </svg>
-            <input class="form-title-input" type="text" name="username" >
+            <input class="form-title-input" type="text" id="user-name" name="user-name" >
                     </div>
-            </label>
-            <label class="form-lebel" for="usertell">Phone
+            <label class="form-lebel" for="user-tel">Phone</label>
               <div class="form-title-input-name">
-                <svg class="icon-form-tellemail" width="18" height="24">
+                <svg class="icon-form" width="18" height="24">
                         <use href="./images/icons.svg#phone-black"></use>
                       </svg>
-            <input class="form-title-input" type="tell" name="usertell">
+            <input class="form-title-input" id="user-tel" type="tel" name="user-tel">
             </div>
-            </label>
-            <label class="form-lebel" for="useremail">Email
+            
+            <label class="form-lebel" for="user-email">Email</label>
               <div class="form-title-input-name">
-                <svg class="icon-form-tellemail" width="18" height="24">
+                <svg class="icon-form" width="18" height="24">
                         <use href="./images/icons.svg#email-black"></use>
                       </svg>
-            <input class="form-title-input" type="email" name="useremail">
+            <input class="form-title-input" id="user-email" type="email" name="user-email">
             </div>
+            <div class="form-lebel-textarea">
+            <label class="form-lebel" for="user-comment">Comment
+            <textarea class="input-textarea" id="user-comment" name="usercoment" placeholder="Text input"></textarea>
             </label>
-            <label class="form-lebel" for="usercomment">Comment
-            <textarea class="form-title-input textarea" name="usercoment" placeholder="Text input"></textarea>
-            </label>
-            </form>
+            </div>
             <div class="form-lebel-checkbox">
-            <input type="checkbox" name="accept" value="ok" required>
-            <label>I accept the terms and conditions of the 
+            <input class="input-checkbox" type="checkbox"  id="user-privacy" name="user-privacy" value="true" required>
+            <label class="input-checkbox-lebel" for="user-privacy"><span class="form-lebel-span"><svg class="icon-checket" width="16" height="16">
+                        <use href="./images/icons.svg#property"></use>
+                      </svg></span>I accept the terms and conditions of the 
             <a class="form-lebel-link" href=""> Privacy Policy</a>
             </label>
-            </div>
-          <div class="container-button-form">
-          <button class="formbtn" type="submit">Send</button>
+          </div>
+          <button class="formbtn" type="button">Send</button>
+          </div>
+            </form>
           </div>
           </div>
-          </div>
+    </div>
   </body>
 </html>
