--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="banner">
         <div class="container container-banner">
           <h1 class="banner-title">Effective Solutions for Your Business</h1>
-          <button  class="banner-button" type="button">Order Service</button>
+          <button class="banner-button" type="button" href="#popup">Order Service</button>
         </div>
       </section>
       </div>
@@ -474,7 +474,7 @@
         </div>
       </div>
     </footer>
-    <div class="popup">
+    <div class="popup" id="popup">
       <div class="popup-body">
         <div class="popup-content">
           <button class="content-close" type="button">
@@ -514,9 +514,13 @@
             </div>
             <div class="form-lebel-checkbox">
             <input class="input-checkbox" type="checkbox"  id="user-privacy" name="user-privacy" value="true" required>
-            <label class="input-checkbox-lebel" for="user-privacy"><span class="form-lebel-span"><svg class="icon-checket" width="16" height="16">
+            <label class="input-checkbox-lebel" for="user-privacy">
+              <span class="form-lebel-span">
+                <svg class="icon-checket" width="16" height="16">
                         <use href="./images/icons.svg#property"></use>
-                      </svg></span>I accept the terms and conditions of the 
+                      </svg>
+                    </span>
+                    I accept the terms and conditions of the  
             <a class="form-lebel-link" href=""> Privacy Policy</a>
             </label>
           </div>
