--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="banner">
         <div class="container container-banner">
           <h1 class="banner-title">Effective Solutions for Your Business</h1>
-          <button class="banner-button" type="button" href="#popup">Order Service</button>
+          <button class="banner-button" type="button" >Order Service</button>
         </div>
       </section>
       </div>
@@ -475,7 +475,7 @@
       </div>
     </footer>
     
-    <div class="popup" id="popup">
+    <div class="popup is-open" id="popup">
       <div class="popup-body">
           <button class="content-close" type="button">
             <svg class="icon-close" width="8" height="8">
@@ -522,11 +522,11 @@
 
             <div class="form-lebel-textarea">
             <label class="form-lebel" for="user-comment">Comment</label>
-            <textarea class="input-textarea" id="user-comment" name="usercoment" placeholder="Text input"></textarea>
+            <textarea class="input-textarea" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
             </div>
 
             <div class="form-lebel-checkbox">
-            <input class="visually-hidden" type="checkbox"  id="user-privacy" name="user-privacy" value="true" required>
+            <input class="visually-hidden" type="checkbox"  id="user-privacy" name="user-privacy" value="true">
             <label class="input-checkbox-lebel" for="user-privacy">
               <span class="form-lebel-span">
                 <svg class="icon-checket" width="10" height="8">
