--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             </div>
 
             <div class="form-lebel-checkbox">
-            <input class="visually-hidden" type="checkbox"  id="user-privacy" name="user-privacy" value="true">
+            <input class="visually-hidden" type="checkbox" checked id="user-privacy" name="user-privacy" value="true">
             <label class="input-checkbox-lebel" for="user-privacy">
               <span class="form-lebel-span">
                 <svg class="icon-checket" width="10" height="8">
