--- a/index.html
+++ b/index.html
@@ -526,11 +526,11 @@
             </div>
 
             <div class="form-lebel-checkbox">
-            <input class="visually-hidden" type="checkbox" checked id="user-privacy" name="user-privacy" value="true">
+            <input class="form-title-input-name visually-hidden" type="checkbox" checked id="user-privacy" name="user-privacy" value="true">
             <label class="input-checkbox-lebel" for="user-privacy">
               <span class="form-lebel-span">
                 <svg class="icon-checket" width="10" height="8">
-                        <use href="./images/icons.svg#property"></use>
+                        <use href="./images/icons.svg#checkbox-icon"></use>
                       </svg>
                     </span>
                     I accept the terms and conditions of the  
