--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
             </div>
 
             <div class="form-lebel-checkbox">
-            <input class="form-title-input-name visually-hidden" type="checkbox" checked id="user-privacy" name="user-privacy" value="true">
+            <input class="form-title-input-name visually-hidden" type="checkbox" id="user-privacy" name="user-privacy" value="true">
             <label class="input-checkbox-lebel" for="user-privacy">
-              <span class="form-lebel-span">
+              <span class="form-lebel-span span-checked">
                 <svg class="icon-checket" width="10" height="8">
                         <use href="./images/icons.svg#checkbox-icon"></use>
                       </svg>
